# spellingbee-solution

./: dockerfile  pyproject.toml  readme.md
app/: app.py  swagger.yml
app/spellingb/: api_functions.py  spellingb.py  test_api.py
app/templates/: home.html
copilot/: .workspace
copilot/pipelines/spellingbee-solution-main/: buildspec.yml  manifest.yml
copilot/spellingbee-solution/: manifest.yml
