[tool.poetry]
name = "spellingb-solutions"
version = "0.1.0"
description = ""
authors = ["Peter Lukacs <lukacs.peter.andras@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
english-words = "^2.0.1"
flask = "2.2.2"
connexion = {version = "2.14.1", extras = ["swagger-ui"]}

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
mypy = "^1.7.1"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
